Index Page Completed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <!-- BootStrap 5 Link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
 
+  <!-- Font Awesome Icon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
 
   <link rel="stylesheet" href="./css/utility.css">
@@ -19,6 +22,8 @@
 </head>
 
 <body>
+
+  <!-- Header Section -->
 
   <header>
     <div class="container">
@@ -33,6 +38,8 @@
     </div>
   </header>
 
+  <!-- Admission: Call-to-Action -->
+
   <section id="call-to-action">
     <div class="container">
       <p>Primary & Secondary School</p>
@@ -45,6 +52,8 @@
       </div>
     </div>
   </section>
+
+  <!-- Hero: Call-to-Action: Gallery, Library -->
 
   <section id="hero">
     <article>
@@ -75,8 +84,162 @@
     </article>
   </section>
 
-  <div style="padding-top: 30rem;"></div>
+  <section id="statements">
+    <div class="container">
+      <i class="fa-regular fa-bookmark"></i>
+      <h3>Mission</h3>
+      <h1>Mveledzandivho's Mission & Vision</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste accusantium aliquam consectetur architecto! Minus
+        cum, magni officia quisquam, deserunt quod ipsam veniam esse, nam sapiente illum excepturi quidem hic laudantium
+        necessitatibus dolores illo. Dolore ex, pariatur itaque et tenetur ea debitis! Sunt consequatur obcaecati
+        debitis dolorum commodi, ab ad repellat eum modi nemo cumque excepturi ea odit sequi illum quasi?
+      </p>
 
+      <div>
+        <a href="./sponsor.html" class="btn">Get Involved</a>
+      </div>
+    </div>
+  </section>
+
+  <section id="principal">
+    <article>
+      <div>
+        <p>a word</p>
+        <h2>From Our principal</h2>
+        <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita perferendis blanditiis amet fugit
+          dolor alias, quidem, id ex, facere harum magnam totam. Dolore quo corporis libero saepe, fuga, maxime
+          voluptates
+          rem recusandae assumenda fugit ipsum consequatur voluptatem iste earum perferendis!</blockquote>
+      </div>
+      <p> - Principle Name</p>
+    </article>
+    <article style="background-image: url('../images/principal-1.jfif') ;"></article>
+  </section>
+
+  <section id="events">
+    <div class="top">
+      <i class="fa-regular fa-calendar"></i>
+      <p>calendar</p>
+      <h1>Our Upcoming Curricular Events & Activities</h1>
+    </div>
+
+    <div class="bottom">
+      <div class="box">
+        <p>
+          <!-- From Date -->
+          <span>01</span>
+          May
+        </p>
+        <h2>May PTA Meeting</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
+      </div>
+
+      <div class="box">
+        <p>
+          <span>12</span>
+          May
+        </p>
+        <h2>Parent Teacher Conferences</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
+      </div>
+
+      <div class="box">
+        <p>
+          <span>14</span>
+          May
+        </p>
+        <h2>National Holiday – No School</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
+      </div>
+
+      <div class="box">
+        <p>
+          <span>22</span>
+          May
+        </p>
+        <h2>Staff Appreciation Week</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
+      </div>
+
+      <div class="box">
+        <p>
+          <span>03</span>
+          June
+        </p>
+        <h2>State Testing Begins</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
+      </div>
+
+      <div class="box">
+        <p>
+          <span>01</span>
+          May
+        </p>
+        <h2>6th Grade Graduation</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
+      </div>
+
+    </div>
+  </section>
+
+  <section id="get-in-touch">
+    <div class="container">
+      <article>
+        <div>
+          <h2>450</h2>
+          <p>Students</p>
+        </div>
+        <div>
+          <h2>30</h2>
+          <p>Faculty</p>
+        </div>
+        <div>
+          <h2>24</h2>
+          <p>After School Programs</p>
+        </div>
+        <div>
+          <h2>51</h2>
+          <p>Years Established</p>
+        </div>
+      </article>
+
+      <article>
+        <h2>Get In Touch</h2>
+
+        <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
+
+        <p>Telephone: (435) 123-3566</p>
+
+        <p>Email: hello@divi.edu</p>
+
+        <p>School Hours: M-F: 8am – 3pm</p>
+
+        <a href="./contact.html" class="btn">Contact Us</a>
+      </article>
+    </div>
+
+    <div class="policy">
+      <p>Non-Discrimination Policy</p>
+      <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
+        such as
+        its website and application, you consent to the processing of your personal information by Mveledzandivho
+        Primary.
+        The Processing of personal information will be done in accordance with its POPI Policy.  Should you not
+        consent, you must cease your interaction with Mveledzandivho Primary on any and every platform.</p>
+    </div>
+  </section>
+
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2021, Mveledzandivho Primary School. All right reserved.</p>
+      <ul>
+        <li><a href=""><i class="fab fa-facebook"></i></a></li>
+        <li><a href=""><i class="fab fa-instagram"></i></a></li>
+      </ul>
+    </div>
+  </footer>
 
   <script src="./js/main.js"></script>
 
