Principal Background Image Error Resolved

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </div>
       <p> - Principle Name</p>
     </article>
-    <article style="background-image: url('../images/principal-1.jfif') ;"></article>
+    <article style='background-image: url("./images/principal-1.jfif");'></article>
   </section>
 
   <section id="events">
