Alumni, Wall of Fame and Sponsors Section Added

--- a/about.html
+++ b/about.html
@@ -66,6 +66,29 @@
     </article>
   </section>
 
+  <section id="about-alumni">
+    <article>
+      <p>Our Alumni</p>
+      <h2>Life Winners of Mveledzandivho</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident at, hic accusantium laborum pariatur eaque
+        maiores magni cupiditate voluptatem odio recusandae totam, repudiandae, ratione officia harum minus eius
+        delectus ipsa?</p>
+      <a href="#" class="btn">Meet Them</a>
+    </article>
+    <article></article>
+  </section>
+
+  <section id="about-wof">
+    <article></article>
+    <article>
+      <p>Wall of Fame</p>
+      <h2>Meet he Winner of This Year</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, quo quae eveniet, itaque non reprehenderit
+        harum ab velit laborum corrupti facilis ipsum eaque nam quasi repudiandae explicabo magni animi tempore?</p>
+      <a href="#" class="btn">Visit Wall of Fame</a>
+    </article>
+  </section>
+
   <section id="curriculum">
     <i class="fa-solid fa-list"></i>
     <p>curriculum</p>
@@ -151,7 +174,44 @@
     </div>
   </section>
 
+  <section id="about-sponsors">
+    <i class="fa-solid fa-hands-holding"></i>
+    <p>Featured Sponsors</p>
+    <h2>Thank You To Our Sponsors</h2>
+    <div class="container">
 
+      <div class="box">
+        <img src="./images/sponsor-1.png" alt="">
+      </div>
+
+      <div class="box">
+        <img src="./images/sponsor-2.png" alt="">
+      </div>
+
+      <div class="box">
+        <img src="./images/sponsor-3.png" alt="">
+      </div>
+
+      <div class="box">
+        <img src="./images/sponsor-4.jpg" alt="">
+      </div>
+
+    </div>
+
+    <div class="container all-sponsors">
+      <article>
+        <p>Get Involved in Our Mission</p>
+        <h2>Become a Sponsor</h2>
+        <a href="#" class="btn">Get Involved</a>
+      </article>
+      <article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, veritatis earum! Consequatur hic quidem nemo
+          illum laborum officia repellat quas itaque dolor et rem inventore praesentium provident modi ex ullam dicta,
+          vero iusto impedit minus eaque. Earum, error! Id, eum.</p>
+        <a href="#" class="btn">Visit All Sponsors</a>
+      </article>
+    </div>
+  </section>
 
   <section id="get-in-touch">
     <div class="container">
