--- a/index.html
+++ b/index.html
@@ -117,6 +117,43 @@
     <article style='background-image: url("./images/principal-1.jfif");'></article>
   </section>
 
+  <section id="notice">
+    <i class="fa-solid fa-exclamation"></i>
+    <p>Notices</p>
+    <h2>From Mveledzandivho</h2>
+
+    <div class="container">
+      <div class="box">
+        <h2>exam date postponed</h2>
+        <p>21st Dec, 2021</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
+      </div>
+
+      <div class="box">
+        <h2>exam date postponed</h2>
+        <p>21st Dec, 2021</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
+      </div>
+
+      <div class="box">
+        <h2>exam date postponed</h2>
+        <p>21st Dec, 2021</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
+      </div>
+
+      <div class="box">
+        <h2>exam date postponed</h2>
+        <p>21st Dec, 2021</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
+      </div>
+    </div>
+
+    <div class="container read-all">
+      <a href="#" class="btn">View All <i class="fa-regular fa-circle-right"></i></a>
+    </div>
+
+  </section>
+
   <section id="events">
     <div class="top">
       <i class="fa-regular fa-calendar"></i>
@@ -239,6 +276,8 @@
       </ul>
     </div>
   </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
 
   <script src="./js/main.js"></script>
 
