--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
       <ul>
         <li><a href="./index.html">Home</a></li>
         <li class="active"><a href="./about.html">About</a></li>
+        <li><a href="./admission.html">Apply</a></li>
         <li><a href="./staff.html">Staff</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
