--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
         <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./admission.html">Apply</a></li>
-        <li class="active"><a href="./staff.html">Staff</a></li>
+        <li><a href="./staff.html">Staff</a></li>
         <li><a href="./contact.html">Contact</a></li>
       </ul>
       <a href="./login.html" class="btn">Log In</a>
