Gallery Page Added

--- a/admission.html
+++ b/admission.html
@@ -46,7 +46,7 @@
     </p>
   </section>
 
-  <!-- <section id="admission-content-1">
+  <section id="admission-content-1">
     <article>
       <h1>Learn By Doing</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -57,9 +57,9 @@
       </p>
     </article>
     <article></article>
-  </section> -->
+  </section>
 
-  <!-- <section id="admission-content-2">
+  <section id="admission-content-2">
     <article>
       <h1>BEYOND THE BOOKS</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -70,7 +70,10 @@
       </p>
     </article>
     <article></article>
-  </section> -->
+  </section>
+
+
+
 
   <section id="admission-details">
 
@@ -160,6 +163,7 @@
       <div>
         <input type="email" placeholder="Email">
         <input type="text" placeholder="Phone">
+        <input type="text" placeholder="Address">
       </div>
 
       <div>
