Sponsor Our School Page Added

--- a/sponsor.html
+++ b/sponsor.html
@@ -29,7 +29,7 @@
     <div class="container">
       <img src="./images/brand.png" alt="brand-icon">
       <ul>
-        <li class="active"><a href="./index.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./admission.html">Apply</a></li>
         <li><a href="./staff.html">Staff</a></li>
@@ -39,17 +39,97 @@
     </div>
   </header>
 
-  <section id="gallery-hero">
-    <p>Environment</p>
-    <h1>Mveledzandivho's Gallery</h1>
+  <section id="sponsor-hero">
+    <p>Get Involved In Our Mission</p>
+    <h1>Sponsor Our School</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ipsam aperiam quisquam odio odit vel veritatis.
       Earum tempore consequatur architecto?</p>
   </section>
 
-  <section id="gallery-media">
-
+  <section id="about-mission">
+    <article>
+      <p>Our Mission</p>
+      <h2>What we Stand For</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, accusamus vero odit voluptatibus beatae
+        consequatur nulla voluptate ut necessitatibus aliquid et similique nam, corrupti ipsam magnam? At sapiente
+        possimus molestias.</p>
+    </article>
+    <article></article>
   </section>
 
+  <section id="about-sponsors">
+    <i class="fa-solid fa-hands-holding"></i>
+    <p>Featured Sponsors</p>
+    <h2>Thank You To Our Sponsors</h2>
+    <div class="container">
+
+      <div class="box">
+        <img src="./images/sponsor-1.png" alt="">
+      </div>
+
+      <div class="box">
+        <img src="./images/sponsor-2.png" alt="">
+      </div>
+
+      <div class="box">
+        <img src="./images/sponsor-3.png" alt="">
+      </div>
+
+      <div class="box">
+        <img src="./images/sponsor-4.jpg" alt="">
+      </div>
+
+    </div>
+
+    <div class="container all-sponsors">
+      <article>
+        <p>Get Involved in Our Mission</p>
+        <h2>Become our Sponsor</h2>
+        <a href="#sponsor-form" class="btn">Get Involved</a>
+      </article>
+      <article>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, veritatis earum! Consequatur hic quidem nemo
+          illum laborum officia repellat quas itaque dolor et rem inventore praesentium provident modi ex ullam dicta,
+          vero iusto impedit minus eaque. Earum, error! Id, eum.</p>
+        <a href="#" class="btn">Visit All Sponsors</a>
+      </article>
+    </div>
+  </section>
+
+  <section id="sponsor-form">
+    <i class="fa-regular fa-file"></i>
+    <p>Become a Sponsor</p>
+    <h2>Sponsor Our Mission</h2>
+
+    <form action="" class="form-box">
+
+      <div>
+        <h1>Please, Let us Know <br> Who is Uplifting our School</h1>
+      </div>
+
+      <div>
+        <input type="text" placeholder="Full Name">
+        <input type="email" placeholder="Email">
+        <input type="text" placeholder="Phone">
+      </div>
+
+      <div>
+        <input type="text" placeholder="Street Address">
+        <input type="text" placeholder="Suburb & Province">
+        <input type="text" placeholder="Postal Code">
+      </div>
+
+      <div>
+        <textarea name="" id="" placeholder="Want to Say Something"></textarea>
+      </div>
+
+      <div>
+        <button type="submit" class="btn">Submit Application <i class="fa-regular fa-circle-right"></i></button>
+      </div>
+
+    </form>
+
+  </section>
 
   <section id="get-in-touch">
     <div class="container">
