All Notice Page Added

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
 
     <div class="container read-all">
-      <a href="#" class="btn">View All <i class="fa-regular fa-circle-right"></i></a>
+      <a href="./notice.html" class="btn">View All <i class="fa-regular fa-circle-right"></i></a>
     </div>
 
   </section>
