Alumni and Wall of Fame Added

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
   <section id="about-hero">
     <p>About</p>
     <h1>About Mveledzandivho</h1>
-    <a href="#" class="btn">Get Involved</a>
+    <a href="./sponsor.html" class="btn">Get Involved</a>
   </section>
 
   <section id="about-mission">
@@ -74,7 +74,7 @@
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident at, hic accusantium laborum pariatur eaque
         maiores magni cupiditate voluptatem odio recusandae totam, repudiandae, ratione officia harum minus eius
         delectus ipsa?</p>
-      <a href="#" class="btn">Meet Them</a>
+      <a href="./alumni.html" class="btn">Meet Them</a>
     </article>
     <article></article>
   </section>
@@ -86,7 +86,7 @@
       <h2>Meet he Winner of This Year</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias, quo quae eveniet, itaque non reprehenderit
         harum ab velit laborum corrupti facilis ipsum eaque nam quasi repudiandae explicabo magni animi tempore?</p>
-      <a href="#" class="btn">Visit Wall of Fame</a>
+      <a href="./wall-of-fame.html" class="btn">Visit Wall of Fame</a>
     </article>
   </section>
 
