--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li><a href="./contact.html">Contact</a></li>
       </ul>
       <a href="./login.html" class="btn">Log In</a>
+      <i class="fas fa-bars"></i>
     </div>
   </header>
 
