Contact Page Responsive

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/responsive.css">
 
-  <title>Mveledzandivho Primary - Home</title>
+  <title>Mveledzandivho Primary - Contact</title>
 </head>
 
 <body>
@@ -29,15 +29,35 @@
     <div class="container">
       <img src="./images/brand.png" alt="brand-icon">
       <ul>
-        <li><a href="./index.html">Home</a></li>
+        <li class="active"><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./admission.html">Apply</a></li>
         <li><a href="./staff.html">Staff</a></li>
-        <li class="active"><a href="./contact.html">Contact</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
       <a href="./login.html" class="btn">Log In</a>
+      <i class="fas fa-bars"></i>
     </div>
   </header>
+
+  <!-- Side Navigation -->
+
+  <aside>
+    <div class="container">
+      <img src="./images/brand.png" alt="brand-icon">
+      <a href="./login.html" class="btn">Log In</a>
+      <i class="fas fa-times"></i>
+    </div>
+    <nav>
+      <ul class="container">
+        <li class="active"><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./admission.html">Apply</a></li>
+        <li><a href="./staff.html">Staff</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </aside>
 
   <section id="contact-hero">
     <p>Contact us</p>
