--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
     <div class="container">
       <img src="./images/brand.png" alt="brand-icon">
       <ul>
-        <li class="active"><a href="./index.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./admission.html">Apply</a></li>
         <li><a href="./staff.html">Staff</a></li>
@@ -51,7 +51,7 @@
     </div>
     <nav>
       <ul class="container">
-        <li class="active"><a href="./index.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./admission.html">Apply</a></li>
         <li><a href="./staff.html">Staff</a></li>
