--- a/sponsor.html
+++ b/sponsor.html
@@ -22,7 +22,6 @@
 </head>
 
 <body>
-
   <!-- Header Section -->
 
   <header>
@@ -36,8 +35,28 @@
         <li><a href="./contact.html">Contact</a></li>
       </ul>
       <a href="./login.html" class="btn">Log In</a>
+      <i class="fas fa-bars"></i>
     </div>
   </header>
+
+  <!-- Side Navigation -->
+
+  <aside>
+    <div class="container">
+      <img src="./images/brand.png" alt="brand-icon">
+      <a href="./login.html" class="btn">Log In</a>
+      <i class="fas fa-times"></i>
+    </div>
+    <nav>
+      <ul class="container">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./admission.html">Apply</a></li>
+        <li><a href="./staff.html">Staff</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </aside>
 
   <section id="sponsor-hero">
     <p>Get Involved In Our Mission</p>
