--- a/alumni.html
+++ b/alumni.html
@@ -23,8 +23,6 @@
 
 <body>
 
-  <!-- Header Section -->
-
   <header>
     <div class="container">
       <img src="./images/brand.png" alt="brand-icon">
@@ -36,8 +34,29 @@
         <li><a href="./contact.html">Contact</a></li>
       </ul>
       <a href="./login.html" class="btn">Log In</a>
+      <i class="fas fa-bars"></i>
     </div>
   </header>
+
+  <!-- Side Navigation -->
+
+  <aside>
+    <div class="container">
+      <img src="./images/brand.png" alt="brand-icon">
+      <a href="./login.html" class="btn">Log In</a>
+      <i class="fas fa-times"></i>
+    </div>
+    <nav>
+      <ul class="container">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./admission.html">Apply</a></li>
+        <li><a href="./staff.html">Staff</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </aside>
+
 
   <section id="alumni-hero">
     <p>Life Winners at Mveledzandivho</p>
