All Sponsors Page Responsive

--- a/about.html
+++ b/about.html
@@ -224,13 +224,13 @@
       <article>
         <p>Get Involved in Our Mission</p>
         <h2>Become a Sponsor</h2>
-        <a href="#" class="btn">Get Involved</a>
+        <a href="./sponsor.html" class="btn">Get Involved</a>
       </article>
       <article>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, veritatis earum! Consequatur hic quidem nemo
           illum laborum officia repellat quas itaque dolor et rem inventore praesentium provident modi ex ullam dicta,
           vero iusto impedit minus eaque. Earum, error! Id, eum.</p>
-        <a href="#" class="btn">Visit All Sponsors</a>
+        <a href="./all-sponsors.html" class="btn">Visit All Sponsors</a>
       </article>
     </div>
   </section>
