--- a/all-sponsors.html
+++ b/all-sponsors.html
@@ -25,6 +25,8 @@
 
   <!-- Header Section -->
 
+  <!-- Header Section -->
+
   <header>
     <div class="container">
       <img src="./images/brand.png" alt="brand-icon">
@@ -36,8 +38,28 @@
         <li><a href="./contact.html">Contact</a></li>
       </ul>
       <a href="./login.html" class="btn">Log In</a>
+      <i class="fas fa-bars"></i>
     </div>
   </header>
+
+  <!-- Side Navigation -->
+
+  <aside>
+    <div class="container">
+      <img src="./images/brand.png" alt="brand-icon">
+      <a href="./login.html" class="btn">Log In</a>
+      <i class="fas fa-times"></i>
+    </div>
+    <nav>
+      <ul class="container">
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./admission.html">Apply</a></li>
+        <li><a href="./staff.html">Staff</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </aside>
 
   <section id="sponsors-hero">
     <p>Mission Uplifters</p>
