--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <!-- Font Awesome Icon -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+  <!-- Animate On Scroll -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 
   <link rel="stylesheet" href="./css/utility.css">
@@ -63,13 +65,15 @@
 
   <section id="call-to-action">
     <div class="container">
-      <p>Primary & Secondary School</p>
-      <h1>Welcome to Mveledzandivho</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, perferendis culpa, odio, voluptas impedit
+      <p data-aos="fade-up">Primary & Secondary School</p>
+      <h1 data-aos="fade-up">Welcome to Mveledzandivho</h1>
+      <p data-aos="fade-up">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, perferendis
+        culpa,
+        odio, voluptas impedit
         molestias est corporis nam incidunt perspiciatis exercitationem. Consequatur voluptate eum obcaecati nesciunt
         quisquam odit. Sint, inventore.</p>
       <div>
-        <a href="./admission.html" class="btn">Admission</a>
+        <a data-aos="fade-up" href="./admission.html" class="btn">Admission</a>
       </div>
     </div>
   </section>
@@ -78,12 +82,13 @@
 
   <section id="hero">
     <article>
-      <h1>Our environment</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus veniam inventore nobis modi repellendus? Modi,
+      <h1 data-aos="fade-right">Our environment</h1>
+      <p data-aos="fade-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus veniam inventore nobis
+        modi repellendus? Modi,
         unde nobis maxime quam facilis amet doloribus velit suscipit provident culpa, perferendis alias veniam sequi.
       </p>
-      <a href="./gallery.html" class="btn">Visit Gallery</a>
-      <div>
+      <a data-aos="fade-right" href="./gallery.html" class="btn">Visit Gallery</a>
+      <div data-aos="fade-right">
         <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
 
         <p>Telephone: (435) 123-3566</p>
@@ -94,23 +99,25 @@
       </div>
     </article>
     <article>
-      <h1>Authorized Study Materials</h1>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic ullam esse neque, ab debitis dolores harum velit
+      <h1 data-aos="fade-left">Authorized Study Materials</h1>
+      <p data-aos="fade-left">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic ullam esse neque, ab debitis
+        dolores harum velit
         error odio eligendi distinctio quas, aut ea quasi vel repudiandae animi consectetur! Laboriosam!</p>
 
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa veniam amet cupiditate mollitia vero fugit
+      <p data-aos="fade-left">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic ipsa veniam amet cupiditate
+        mollitia vero fugit
         praesentium delectus odit ad.</p>
 
-      <a href="./library.html" class="btn">Visit Library</a>
+      <a data-aos="fade-left" href="./library.html" class="btn">Visit Library</a>
     </article>
   </section>
 
   <section id="statements">
     <div class="container">
-      <i class="fa-regular fa-bookmark"></i>
-      <h3>Mission</h3>
-      <h1>Mveledzandivho's Mission & Vision</h1>
-      <p>
+      <i data-aos="slide-up" class="fa-regular fa-bookmark"></i>
+      <h3 data-aos="slide-up">Mission</h3>
+      <h1 data-aos="slide-up">Mveledzandivho's Mission & Vision</h1>
+      <p data-aos="slide-up">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste accusantium aliquam consectetur architecto! Minus
         cum, magni officia quisquam, deserunt quod ipsam veniam esse, nam sapiente illum excepturi quidem hic laudantium
         necessitatibus dolores illo. Dolore ex, pariatur itaque et tenetur ea debitis! Sunt consequatur obcaecati
@@ -118,7 +125,7 @@
       </p>
 
       <div>
-        <a href="./sponsor.html" class="btn">Get Involved</a>
+        <a data-aos="slide-up" href="./sponsor.html" class="btn">Get Involved</a>
       </div>
     </div>
   </section>
@@ -126,43 +133,44 @@
   <section id="principal">
     <article>
       <div>
-        <p>a word</p>
-        <h2>From Our principal</h2>
-        <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita perferendis blanditiis amet fugit
+        <p data-aos="slide-left">a word</p>
+        <h2 data-aos="slide-left">From Our principal</h2>
+        <blockquote data-aos="slide-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita perferendis
+          blanditiis amet fugit
           dolor alias, quidem, id ex, facere harum magnam totam. Dolore quo corporis libero saepe, fuga, maxime
           voluptates
           rem recusandae assumenda fugit ipsum consequatur voluptatem iste earum perferendis!</blockquote>
       </div>
-      <p> - Principle Name</p>
+      <p data-aos="slide-left"> - Principle Name</p>
     </article>
     <article style='background-image: url("./images/principal-1.jfif");'></article>
   </section>
 
   <section id="notice">
-    <i class="fa-solid fa-exclamation"></i>
-    <p>Notices</p>
-    <h2>From Mveledzandivho</h2>
+    <i data-aos="slide-up" class="fa-solid fa-exclamation"></i>
+    <p data-aos="slide-up">Notices</p>
+    <h2 data-aos="slide-up">From Mveledzandivho</h2>
 
     <div class="container">
-      <div class="box">
+      <div data-aos="fade-up" class="box">
         <h2>exam date postponed</h2>
         <p>21st Dec, 2021</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
       </div>
 
-      <div class="box">
+      <div data-aos="fade-up" class="box">
         <h2>exam date postponed</h2>
         <p>21st Dec, 2021</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
       </div>
 
-      <div class="box">
+      <div data-aos="fade-up" class="box">
         <h2>exam date postponed</h2>
         <p>21st Dec, 2021</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
       </div>
 
-      <div class="box">
+      <div data-aos="fade-up" class="box">
         <h2>exam date postponed</h2>
         <p>21st Dec, 2021</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ratione illum error ipsa aliquam quos.</p>
@@ -170,20 +178,20 @@
     </div>
 
     <div class="container read-all">
-      <a href="./notice.html" class="btn">View All <i class="fa-regular fa-circle-right"></i></a>
+      <a data-aos="fade-up" href="./notice.html" class="btn">View All <i class="fa-regular fa-circle-right"></i></a>
     </div>
 
   </section>
 
   <section id="events">
     <div class="top">
-      <i class="fa-regular fa-calendar"></i>
-      <p>calendar</p>
-      <h1>Our Upcoming Curricular Events & Activities</h1>
+      <i data-aos="slide-up" class="fa-regular fa-calendar"></i>
+      <p data-aos="slide-up">calendar</p>
+      <h1 data-aos="slide-up">Our Upcoming Curricular Events & Activities</h1>
     </div>
 
     <div class="bottom">
-      <div class="box">
+      <div class="box" data-aos="zoom-in">
         <p>
           <!-- From Date -->
           <span>01</span>
@@ -193,7 +201,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="zoom-in">
         <p>
           <span>12</span>
           May
@@ -202,7 +210,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="zoom-in">
         <p>
           <span>14</span>
           May
@@ -211,7 +219,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="zoom-in">
         <p>
           <span>22</span>
           May
@@ -220,7 +228,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="zoom-in">
         <p>
           <span>03</span>
           June
@@ -229,7 +237,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quos minima eaque quo!</p>
       </div>
 
-      <div class="box">
+      <div class="box" data-aos="zoom-in">
         <p>
           <span>01</span>
           May
@@ -244,25 +252,25 @@
   <section id="get-in-touch">
     <div class="container">
       <article>
-        <div>
+        <div data-aos="zoom-in">
           <h2>450</h2>
           <p>Students</p>
         </div>
-        <div>
+        <div data-aos="zoom-in">
           <h2>30</h2>
           <p>Faculty</p>
         </div>
-        <div>
+        <div data-aos="zoom-in">
           <h2>24</h2>
           <p>After School Programs</p>
         </div>
-        <div>
+        <div data-aos="zoom-in">
           <h2>51</h2>
           <p>Years Established</p>
         </div>
       </article>
 
-      <article>
+      <article data-aos="zoom-in">
         <h2>Get In Touch</h2>
 
         <p>Location: 1243 Divi St., San Francisco, CA 92421</p>
@@ -277,7 +285,7 @@
       </article>
     </div>
 
-    <div class="policy">
+    <div class="policy" data-aos="fade-up">
       <p>Non-Discrimination Policy</p>
       <p>By accessing, using and/or interacting with Mveledzandivho Primary via its online and/or electronic platforms
         such as
@@ -299,8 +307,18 @@
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+  <script>
+    AOS.init({
+      offset: 200,
+      duration: 600
+    });
+  </script>
 
   <script src="./js/main.js"></script>
+
+
 
 </body>
 
