Animation Once and Mirror Fixed

--- a/index.html
+++ b/index.html
@@ -312,7 +312,10 @@
   <script>
     AOS.init({
       offset: 200,
-      duration: 600
+      duration: 600,
+      once: true,
+      mirror: true,
+      easing: 'ease-in-out',
     });
   </script>
 
