News Section Added

--- a/index.html
+++ b/index.html
@@ -183,6 +183,68 @@
 
   </section>
 
+  <section id="news">
+    <i class="fa-regular fa-newspaper"></i>
+    <p>Blog</p>
+    <h2>News & Updates</h2>
+
+    <div class="container">
+
+      <div class="primary-news">
+        <div class="card">
+          <div class="card-img-top"
+            style="background: url('https://source.unsplash.com/1600x900/?nature') no-repeat center center / cover;">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Model Behaviour</h5>
+            <p class="mb-1"><span><i class="fas fa-calendar-days"></i> 1th January, 2021</span></p>
+            <p class="card-text">I recently read a very interesting article on how Inuit parents raise their children.
+              Entitled, &ldquo;How to discipline
+              your kids...
+            </p>
+            <a href="#" class="btn">Read More <i class="fa-regular fa-circle-right"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="secondary-news">
+
+        <div class="card">
+          <div class="card-img-top"
+            style="background: url('https://source.unsplash.com/1600x900/?school') no-repeat center center / cover;">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Comprehending Comprehensio</h5>
+            <p class="mb-1"><span><i class="fas fa-calendar-days"></i> 6th June, 2021</span></p>
+            <p class="card-text">Comprehension skills are a fundamental part of reading and these skills need...
+            </p>
+            <a href="#" class="btn">Read More <i class="fa-regular fa-circle-right"></i></a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-img-top"
+            style="background: url('https://source.unsplash.com/1600x900/?books') no-repeat center center / cover;">
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Make your classroom a playroom!</h5>
+            <p class="mb-1"><span><i class="fas fa-calendar-days"></i> 8th September, 2021</span>
+            </p>
+            <p class="card-text">Many of us talk about our classroom and about the &ldquo;work&rdquo; children...
+            </p>
+            <a href="#" class="btn">Read More <i class="fa-regular fa-circle-right"></i></a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container bottom">
+      <a href="#" class="btn">Read Older News <i class="fa-regular fa-circle-right"></i></a>
+    </div>
+
+  </section>
+
   <section id="events">
     <div class="top">
       <i data-aos="slide-up" class="fa-regular fa-calendar"></i>
